--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
     <section class="slider">
       <div class="slider__wrapper">
         <ul class="slider__list">
-          <li class="slider__list-item slide-smartphone active">
-            <p class="slider__slogan">Долго, дорого,<br />скрупулезно.</p>
-            <p class="slider__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
+          <li class="slider-item slider-item--active slider-item--smartphone">
+            <p class="slider-item__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider-item__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
               приложения.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
-          <li class="slider__list-item slide-computer">
-            <p class="slider__slogan">Любим математику как никто другой.</p>
-            <p class="slider__text">Никакого креатива, только математические формулы<br>для расчета идеальных
+          <li class="slider-item slider-item--computer">
+            <p class="slider-item__slogan">Любим математику как никто другой.</p>
+            <p class="slider-item__text">Никакого креатива, только математические формулы<br>для расчета идеальных
               пропорций.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
-          <li class="slider__list-item slide-gadget">
-            <p class="slider__slogan">Долго, дорого,<br />скрупулезно.</p>
-            <p class="slider__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
+          <li class="slider-item slider-item--gadget">
+            <p class="slider-item__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider-item__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
               начинается.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
@@ -61,22 +61,22 @@
     </section>
     <section class="offers">
       <ul class="offers__list">
-        <li class="offers__list-item">
-          <img class="offers__img" src="img/all-sites.png" alt="sites" />
-          <h3 class="offers__title">Веб-сайты</h3>
-          <p class="offers__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
+        <li class="offers-item">
+          <img class="offers-item__img" src="img/all-sites.png" alt="sites" />
+          <h3 class="offers-item__title">Веб-сайты</h3>
+          <p class="offers-item__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
           <a class="button button--red" href="blank.html">Заказать</a>
         </li>
-        <li class="offers__list-item">
-          <img class="offers__img" src="img/apps.png" alt="apps" />
-          <h3 class="offers__title">Приложения</h3>
-          <p class="offers__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
+        <li class="offers-item">
+          <img class="offers-item__img" src="img/apps.png" alt="apps" />
+          <h3 class="offers-item__title">Приложения</h3>
+          <p class="offers-item__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
           <a class="button button--green" href="blank.html">Заказать</a>
         </li>
-        <li class="offers__list-item">
-          <img class="offers__img" src="img/presentations.png" alt="presentations" />
-          <h3 class="offers__title">Презентации</h3>
-          <p class="offers__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
+        <li class="offers-item">
+          <img class="offers-item__img" src="img/presentations.png" alt="presentations" />
+          <h3 class="offers-item__title">Презентации</h3>
+          <p class="offers-item__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
           <a class="button button--yellow" href="blank.html">Заказать</a>
         </li>
       </ul>
@@ -135,12 +135,12 @@
     </section>
   </main>
   <footer class="footer">
-    <section class="contacts">
-      <div class="map__wrapper">
+    <section class="map-and-contacts">
+      <div class="map-and-contacts">
         <div class="map">
           <img class="map__img" src="img/map.png" alt="map" />
         </div>
-        <div class="contacts__wrapper">
+        <div class="contacts">
           <p class="contacts__title">Nёrds Design Studio</p>
           <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
           <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
@@ -151,23 +151,25 @@
     <section class="socials">
       <div class="socials__wrapper">
         <ul class="socials__list">
-          <li class="socials__list-item">
-            <a class="socials__link" href="#">
-              <img class="socials__vk" src="img/vk-icon.svg" alt="Иконка В контакте" /></a>
+          <li class="socials-item">
+            <a class="socials-item__link" href="#">
+              <img class="socials__vk" src="img/vk-icon.svg" alt="Иконка В контакте" />
+            </a>
           </li>
-          <li class="socials__list-item">
-            <a class="socials__link" href="#">
-              <img class="socials__fb" src="img/fb-icon.svg" alt="Иконка В контакте" /></a>
+          <li class="socials-item">
+            <a class="socials-item__link" href="#">
+              <img class="socials__fb" src="img/fb-icon.svg" alt="Иконка В контакте" />
+            </a>
           </li>
-          <li class="socials__list-item">
-            <a class="socials__link" href="#">
+          <li class="socials-item">
+            <a class="socials-item__link" href="#">
               <img class="socials__inst" src="img/inst-icon.svg" alt="Иконка В контакте" />
             </a>
           </li>
         </ul>
-        <div class="footer__inner">
-          <p class="footer__inner-offer">Давайте дружить, это выгодно!</p>
-          <p class="footer__inner-discount">Скидка 10% для друзей из социальных сетей.</p>
+        <div class="socials-promo">
+          <p class="socials-promo__text">Давайте дружить, это выгодно!</p>
+          <p class="socials-promo__discount">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </div>
     </section>
