--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
         </ul>
+        <div class="slider-paging">
+          <button class="slider__button slider__button--current" type="button" aria-label="Первый слайд"></button>
+          <button class="slider__button" type="button" aria-label="Второй слайд"></button>
+          <button class="slider__button" type="button" aria-label="Третий слайд"></button>
+        </div>
       </div>
     </section>
     <section class="offers">
@@ -172,6 +177,29 @@
           <p class="socials-promo__discount">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </div>
+    </section>
+    <section class="modal">
+      <p class="modal__tittle">Напишите нам</p>
+      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
+        <div class="form__data">
+          <p class="form__input">
+            <label for="name">Ваше имя:</label>
+            <input id="name" type="text" name="name" placeholder="Имя Фамилия" />
+          </p>
+          <p class="form__input">
+            <label for="email">Ваш email:</label>
+            <input id="email" type="email" name="email" placeholder="email@example.com" />
+          </p>
+          <p class="form__input item-letter">
+            <label for="text">Текст письма:</label>
+            <textarea id="text" name="letter" placeholder="В свободной форме"></textarea>
+          </p>
+        </div>
+        <button class="button button--modal button--red" type="submit" aria-label="Отправить">
+          Отправить
+        </button>
+      </form>
+      <button class="close__button" type="button" aria-label="Закрыть"></button>
     </section>
   </footer>
 </body>
