--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
           <li class="navigation__menu-item">
             <a href="blank.html">Клиенты</a>
           </li>
-          <li class="navigation__menu-item">
+          <li class="navigation__menu-item navigation__menu-item--current">
             <a href="catalog.html">Магазин</a>
           </li>
           <li class="navigation__menu-item">
@@ -143,10 +143,13 @@
           </div>
           <ul class="catalog__list">
             <li class="catalog__item">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
               <div>
-                <a href="#">
+                <div class="product__img">
                   <img class="product__img" src="img/img-sedona.jpg" alt="Sedona" />
-                </a>
+                </div>
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Sedona</a>
@@ -155,9 +158,12 @@
               </div>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
+              <div class="product__img">
                 <img class="product__img" src="img/img-pink.jpg" alt="Pink" />
-              </a>
+              </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Pink app</a>
                 <p class="product-details__text">Продуктовый лендинг<br />приложения для iOS и Android</p>
@@ -165,9 +171,12 @@
               </div>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
+              <div class="product__img">
                 <img class="product__img" src="img/img-borodinsky.jpg" alt="Borodinsky" />
-              </a>
+              </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Barbershop</a>
                 <p class="product-details__text">Сайт салона красоты.<br />Для мужчин, да.</p>
@@ -175,9 +184,12 @@
               </div>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
+              <div class="product__img">
                 <img class="product__img" src="img/img-mishka.jpg" alt="Mishka" />
-              </a>
+              </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Mishka</a>
                 <p class="product-details__text">Интернет-магазин<br />вязанных игрушек.</p>
@@ -185,9 +197,12 @@
               </div>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
+              <div class="product__img">
                 <img class="product__img" src="img/img-aplus.jpg" alt="Aplus" />
-              </a>
+              </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">A Plus</a>
                 <p class="product-details__text">Лендинг курсов повышения<br />квалификации</p>
@@ -195,9 +210,12 @@
               </div>
             </li>
             <li class="catalog__item">
-              <a href="#">
+              <div class="browser__bar">
+                <div class="points"></div>
+              </div>
+              <div class="product__img">
                 <img class="product__img" src="img/img-kvast.jpg" alt="Kvast" />
-              </a>
+              </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Кваст</a>
                 <p class="product-details__text">Промо-сайт производителя<br />крафтового кваса</p>
