Завершаем вёрстку главной страницы

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section class="partners">
       <ul class="partners__list">
         <li class="partners__list-item">
-          <a class="partners__academy" href="#"></a>
+          <a class="partners__academy" href="https://htmlacademy.ru/intensive/htmlcss"></a>
         </li>
         <li class="partners__list-item">
           <a class="partners__borodinski" href="#"></a>
