Завершаем вёрстку внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>Html Academy: Нёрдс</title>
   <link rel="icon" href="favicon.ico" />
-  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="img/favicon.svg" type="image/svg+xml" />
   <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
