--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" href="img/favicon/180.png" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -125,7 +126,7 @@
     <section class="partners">
       <ul class="partners__list">
         <li class="partners__list-item">
-          <a class="partners__academy" href="#"></a>
+          <a class="partners__academy" href="https://htmlacademy.ru/intensive/htmlcss"></a>
         </li>
         <li class="partners__list-item">
           <a class="partners__borodinski" href="#"></a>
