Доступная разметка внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -65,20 +65,20 @@
           </fieldset>
           <fieldset class="filters-grid">
             <legend>Сетка:</legend>
-            <ul class="grid__list">
+            <ul class="grid__list" >
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="adaptive"
-                  id="filter-adaptive" checked />
+                  id="filter-adaptive" tabindex="0" checked />
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="fixed"
-                  id="filter-fixed" />
+                  id="filter-fixed" tabindex="0" />
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="rubber"
-                  id="filter-rubber" />
+                  id="filter-rubber" tabindex="0" />
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
