табуляция по чекбоксам

--- a/catalog.html
+++ b/catalog.html
@@ -68,17 +68,17 @@
             <ul class="grid__list" >
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="adaptive"
-                  id="filter-adaptive" tabindex="0" checked />
+                  id="filter-adaptive" checked />
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="fixed"
-                  id="filter-fixed" tabindex="0" />
+                  id="filter-fixed" />
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li class="grid-item">
                 <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="rubber"
-                  id="filter-rubber" tabindex="0" />
+                  id="filter-rubber" />
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
